attempted to reconfigure gulp with watch function - not successful!

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -33,6 +33,6 @@ body {
 /***** showcase ******/
 
 #showcase {
-  background: url(../images/main.jpg);
+  background: url(../images/main.jpg) bottom center / cover no-repeat;
   min-height: 750px;
 }
