added a watchCss function to gulpfile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6946,3 +6946,5 @@ body {
 #showcase {
   background: url(../images/main.jpg) bottom center/cover no-repeat;
   min-height: 750px; }
+  #showcase h1 {
+    font-family: "Questrial", sans-serif; }
