--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -35,4 +35,8 @@ body {
 #showcase {
   background: url(../images/main.jpg) bottom center / cover no-repeat;
   min-height: 750px;
+
+  h1 {
+    font-family: "Questrial", sans-serif;
+  }
 }
