--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,12 +1,16 @@
 body {
-  background: blue;
   font-family: "Raleway", sans-serif;
 }
 
 /***** navbar ******/
 
 .navbar {
-  font-weight: 100;
+  font-weight: 300;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 3;
 
   @include media-breakpoint-down(sm) {
     background: #1f1f1f;
@@ -35,8 +39,36 @@ body {
 #showcase {
   background: url(../images/main.jpg) bottom center / cover no-repeat;
   min-height: 750px;
+  position: relative;
+
+  @include media-breakpoint-down(sm) {
+    min-height: 500px;
+  }
+
+  #overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.2);
+    z-index: 1;
+  }
+
+  #header {
+    z-index: 2;
+  }
 
   h1 {
     font-family: "Questrial", sans-serif;
+    line-height: 1;
+
+    @include media-breakpoint-down(sm) {
+      font-size: 4rem;
+    }
   }
+
+  #book {
+    font-size: 1.5rem;
+  } 
 }
