made sections at least 100vh also made fixed top navbar with logic to darken when scrolling down

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6927,10 +6927,6 @@ body {
 /***** navbar ******/
 .navbar {
   font-weight: 300;
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
   z-index: 3; }
   @media (max-width: 767.98px) {
     .navbar {
@@ -6946,14 +6942,14 @@ body {
       .navbar .nav-link:hover {
         border-bottom: none; } }
 
+.nav-scroll {
+  background: #1f1f1f; }
+
 /***** showcase ******/
 #showcase {
   background: url(../images/main.jpg) bottom center/cover no-repeat;
-  min-height: 750px;
+  min-height: 100vh;
   position: relative; }
-  @media (max-width: 767.98px) {
-    #showcase {
-      min-height: 500px; } }
   #showcase #overlay {
     position: absolute;
     top: 0;
@@ -6972,3 +6968,15 @@ body {
         font-size: 4rem; } }
   #showcase #book {
     font-size: 1.5rem; }
+
+/***** about ******/
+#about {
+  min-height: calc(100vh + 65px); }
+  #about h2 {
+    text-transform: uppercase; }
+
+/***** explore ******/
+#explore {
+  min-height: calc(100vh + 65px); }
+  #explore h3 {
+    text-transform: uppercase; }
