--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6972,11 +6972,17 @@ body {
 /***** about ******/
 #about {
   min-height: calc(100vh + 65px); }
+  @media (max-width: 767.98px) {
+    #about {
+      padding-top: 5rem; } }
   #about h2 {
     text-transform: uppercase; }
 
 /***** explore ******/
 #explore {
   min-height: calc(100vh + 65px); }
+  @media (max-width: 767.98px) {
+    #explore {
+      padding-top: 5rem; } }
   #explore h3 {
     text-transform: uppercase; }
