--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6971,7 +6971,7 @@ body {
 
 /***** about ******/
 #about {
-  min-height: calc(100vh + 65px); }
+  padding-top: 8rem; }
   @media (max-width: 767.98px) {
     #about {
       padding-top: 5rem; } }
@@ -6980,9 +6980,24 @@ body {
 
 /***** explore ******/
 #explore {
-  min-height: calc(100vh + 65px); }
+  padding-top: 8rem; }
   @media (max-width: 767.98px) {
     #explore {
       padding-top: 5rem; } }
-  #explore h3 {
+  #explore h2 {
     text-transform: uppercase; }
+
+/***** chatter ******/
+#chatter {
+  padding-top: 8rem; }
+  @media (max-width: 767.98px) {
+    #chatter {
+      padding-top: 5rem; } }
+  #chatter h2 {
+    text-transform: uppercase; }
+  #chatter .fa-quote-left {
+    opacity: 0.3; }
+
+/***** images ******/
+#images {
+  padding-top: 1rem; }
