added newsletter section and also added shadow to images section images

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7001,3 +7001,7 @@ body {
 /***** images ******/
 #images {
   padding-top: 1rem; }
+
+/***** newsletter ******/
+#newsletter h4 {
+  font-weight: 300; }
