overriding bootstrap xl breakpoint to 1300px

--- a/src/scss/customBootstrap.scss
+++ b/src/scss/customBootstrap.scss
@@ -1,3 +1,22 @@
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 600px,
+  md: 800px,
+  lg: 1000px,
+  xl: 1300px
+);
+
+$container-max-widths: (
+  sm: 600px,
+  md: 800px,
+  lg: 1000px,
+  xl: 1300px
+);
+
+
 //Override Default Colors
 $theme-colors:(
   "primary": #36b3a8,
